# adapter-cpython

./: CMakeLists.txt  LICENSE  hunter_assert_empty_string.cmake  hunter_download.cmake  hunter_dump_cmake_flags.cmake  hunter_fatal_error.cmake  hunter_internal_error.cmake  install_certificates.py
.github/workflows/: ci.yaml
.tipi/: deps
